[gd_scene load_steps=119 format=3 uid="uid://ch0ynf31i2uwb"]

[ext_resource type="Script" path="res://Scenes/POI/poi.gd" id="1_r2j3k"]
[ext_resource type="Texture2D" uid="uid://beb8g5li524x3" path="res://Assets/poi_nature_1.png" id="2_7dwvh"]
[ext_resource type="PackedScene" uid="uid://dr7xeec6n4jrt" path="res://Scenes/Gauge/gauge.tscn" id="3_1frcg"]
[ext_resource type="Script" path="res://Scenes/GaugeBar/gauge_bar.gd" id="3_nhnfe"]
[ext_resource type="Texture2D" uid="uid://cudbceod1hfau" path="res://Assets/Happiness_1_Spread.png" id="5_ldp0t"]
[ext_resource type="Texture2D" uid="uid://ci044yqskmuin" path="res://Assets/Happiness_2_Spread.png" id="6_l1a3t"]
[ext_resource type="Texture2D" uid="uid://bta7hqp3jhp2y" path="res://Assets/Happiness_3_Spread.png" id="7_arb1k"]
[ext_resource type="Texture2D" uid="uid://c6f0itcp2ynf" path="res://Assets/Happiness_4_Spread.png" id="8_o3y6b"]
[ext_resource type="Texture2D" uid="uid://dltsi68baequn" path="res://Assets/Happiness_5_Spread.png" id="9_5gl3n"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bkxm0"]
size = Vector2(192, 192)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nk7bn"]
bg_color = Color(0, 0, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t5ems"]
bg_color = Color(0, 1, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_scv73"]
bg_color = Color(1, 1, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kjm1a"]
bg_color = Color(0.982709, 0.365354, 0.615104, 1)

[sub_resource type="Animation" id="Animation_cdern"]
resource_name = "Poi_Happiness_1"
length = 2.0
step = 0.0858
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-49, -88), Vector2(-49, -94), Vector2(-49, -88)]
}

[sub_resource type="Animation" id="Animation_idq4t"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-49, -88)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nsrex"]
_data = {
"Poi_Happiness_1": SubResource("Animation_cdern"),
"RESET": SubResource("Animation_idq4t")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_mjqpn"]
atlas = ExtResource("5_ldp0t")
region = Rect2(0, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_wogyq"]
atlas = ExtResource("5_ldp0t")
region = Rect2(256, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_nhm75"]
atlas = ExtResource("5_ldp0t")
region = Rect2(512, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_tmucn"]
atlas = ExtResource("5_ldp0t")
region = Rect2(768, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_4wd2k"]
atlas = ExtResource("5_ldp0t")
region = Rect2(0, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_ann3n"]
atlas = ExtResource("5_ldp0t")
region = Rect2(256, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_isvyx"]
atlas = ExtResource("5_ldp0t")
region = Rect2(512, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_j5d5q"]
atlas = ExtResource("5_ldp0t")
region = Rect2(768, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ttg5"]
atlas = ExtResource("5_ldp0t")
region = Rect2(0, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_xko1k"]
atlas = ExtResource("5_ldp0t")
region = Rect2(256, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_mx6yp"]
atlas = ExtResource("5_ldp0t")
region = Rect2(512, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_fujbr"]
atlas = ExtResource("5_ldp0t")
region = Rect2(768, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_javgy"]
atlas = ExtResource("5_ldp0t")
region = Rect2(0, 768, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_2jvae"]
atlas = ExtResource("5_ldp0t")
region = Rect2(256, 768, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_x5hun"]
atlas = ExtResource("5_ldp0t")
region = Rect2(512, 768, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_nqtt8"]
atlas = ExtResource("5_ldp0t")
region = Rect2(768, 768, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ypok"]
atlas = ExtResource("5_ldp0t")
region = Rect2(0, 1024, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_o8e0l"]
atlas = ExtResource("5_ldp0t")
region = Rect2(256, 1024, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_a88wk"]
atlas = ExtResource("5_ldp0t")
region = Rect2(512, 1024, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_cna2g"]
atlas = ExtResource("5_ldp0t")
region = Rect2(768, 1024, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_87hag"]
atlas = ExtResource("6_l1a3t")
region = Rect2(0, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_nqfca"]
atlas = ExtResource("6_l1a3t")
region = Rect2(256, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_lxuod"]
atlas = ExtResource("6_l1a3t")
region = Rect2(512, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_3rki1"]
atlas = ExtResource("6_l1a3t")
region = Rect2(768, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_k3rhn"]
atlas = ExtResource("6_l1a3t")
region = Rect2(0, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_a1iji"]
atlas = ExtResource("6_l1a3t")
region = Rect2(256, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_ejhfj"]
atlas = ExtResource("6_l1a3t")
region = Rect2(512, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_acxmg"]
atlas = ExtResource("6_l1a3t")
region = Rect2(768, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_wrsq1"]
atlas = ExtResource("6_l1a3t")
region = Rect2(0, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_cnves"]
atlas = ExtResource("6_l1a3t")
region = Rect2(256, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_vdku2"]
atlas = ExtResource("6_l1a3t")
region = Rect2(512, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_urmaa"]
atlas = ExtResource("6_l1a3t")
region = Rect2(768, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_3kg2x"]
atlas = ExtResource("6_l1a3t")
region = Rect2(0, 768, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_2jjwu"]
atlas = ExtResource("6_l1a3t")
region = Rect2(256, 768, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_43k7a"]
atlas = ExtResource("6_l1a3t")
region = Rect2(512, 768, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_l15fr"]
atlas = ExtResource("6_l1a3t")
region = Rect2(768, 768, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_d7w4o"]
atlas = ExtResource("6_l1a3t")
region = Rect2(0, 1024, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_bi2qh"]
atlas = ExtResource("6_l1a3t")
region = Rect2(256, 1024, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_jtn65"]
atlas = ExtResource("6_l1a3t")
region = Rect2(512, 1024, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_tcu0m"]
atlas = ExtResource("6_l1a3t")
region = Rect2(768, 1024, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_bljql"]
atlas = ExtResource("7_arb1k")
region = Rect2(0, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_6isy4"]
atlas = ExtResource("7_arb1k")
region = Rect2(256, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_md4rf"]
atlas = ExtResource("7_arb1k")
region = Rect2(512, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_5dkld"]
atlas = ExtResource("7_arb1k")
region = Rect2(768, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_cxjvh"]
atlas = ExtResource("7_arb1k")
region = Rect2(0, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_adxyw"]
atlas = ExtResource("7_arb1k")
region = Rect2(256, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_qvkwa"]
atlas = ExtResource("7_arb1k")
region = Rect2(512, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_a6or8"]
atlas = ExtResource("7_arb1k")
region = Rect2(768, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_88mcp"]
atlas = ExtResource("7_arb1k")
region = Rect2(0, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_ir5nt"]
atlas = ExtResource("7_arb1k")
region = Rect2(256, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_cgcef"]
atlas = ExtResource("7_arb1k")
region = Rect2(512, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_m7ofd"]
atlas = ExtResource("7_arb1k")
region = Rect2(768, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_hm8ba"]
atlas = ExtResource("7_arb1k")
region = Rect2(0, 768, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_ym7fs"]
atlas = ExtResource("7_arb1k")
region = Rect2(256, 768, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_4fy8r"]
atlas = ExtResource("7_arb1k")
region = Rect2(512, 768, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_n803j"]
atlas = ExtResource("7_arb1k")
region = Rect2(768, 768, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_qh2aq"]
atlas = ExtResource("7_arb1k")
region = Rect2(0, 1024, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_tnm3t"]
atlas = ExtResource("7_arb1k")
region = Rect2(256, 1024, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_bnrux"]
atlas = ExtResource("7_arb1k")
region = Rect2(512, 1024, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_ni5ho"]
atlas = ExtResource("7_arb1k")
region = Rect2(768, 1024, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_avy0h"]
atlas = ExtResource("8_o3y6b")
region = Rect2(0, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_cvvuc"]
atlas = ExtResource("8_o3y6b")
region = Rect2(256, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_rt47i"]
atlas = ExtResource("8_o3y6b")
region = Rect2(512, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_uv4cc"]
atlas = ExtResource("8_o3y6b")
region = Rect2(768, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_3jcnd"]
atlas = ExtResource("8_o3y6b")
region = Rect2(0, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_1w6cc"]
atlas = ExtResource("8_o3y6b")
region = Rect2(256, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ugm6"]
atlas = ExtResource("8_o3y6b")
region = Rect2(512, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_tkp4y"]
atlas = ExtResource("8_o3y6b")
region = Rect2(768, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_wbq11"]
atlas = ExtResource("8_o3y6b")
region = Rect2(0, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_rojj0"]
atlas = ExtResource("8_o3y6b")
region = Rect2(256, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_48v7a"]
atlas = ExtResource("8_o3y6b")
region = Rect2(512, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_nr6b3"]
atlas = ExtResource("8_o3y6b")
region = Rect2(768, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_ewki0"]
atlas = ExtResource("8_o3y6b")
region = Rect2(0, 768, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_oi5mk"]
atlas = ExtResource("8_o3y6b")
region = Rect2(256, 768, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_b0ptl"]
atlas = ExtResource("8_o3y6b")
region = Rect2(512, 768, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ffa6"]
atlas = ExtResource("8_o3y6b")
region = Rect2(768, 768, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_pjapy"]
atlas = ExtResource("8_o3y6b")
region = Rect2(0, 1024, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_enyo0"]
atlas = ExtResource("8_o3y6b")
region = Rect2(256, 1024, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_syrqt"]
atlas = ExtResource("8_o3y6b")
region = Rect2(512, 1024, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_14lso"]
atlas = ExtResource("8_o3y6b")
region = Rect2(768, 1024, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_55a82"]
atlas = ExtResource("9_5gl3n")
region = Rect2(0, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_ef2ya"]
atlas = ExtResource("9_5gl3n")
region = Rect2(256, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_agt15"]
atlas = ExtResource("9_5gl3n")
region = Rect2(512, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_1v6mo"]
atlas = ExtResource("9_5gl3n")
region = Rect2(768, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_e8qid"]
atlas = ExtResource("9_5gl3n")
region = Rect2(0, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_idlyc"]
atlas = ExtResource("9_5gl3n")
region = Rect2(256, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_vccfr"]
atlas = ExtResource("9_5gl3n")
region = Rect2(512, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_vqrye"]
atlas = ExtResource("9_5gl3n")
region = Rect2(768, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_yxk83"]
atlas = ExtResource("9_5gl3n")
region = Rect2(0, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_g02mb"]
atlas = ExtResource("9_5gl3n")
region = Rect2(256, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_q276c"]
atlas = ExtResource("9_5gl3n")
region = Rect2(512, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_nodc7"]
atlas = ExtResource("9_5gl3n")
region = Rect2(768, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_hawy1"]
atlas = ExtResource("9_5gl3n")
region = Rect2(0, 768, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_cn1gp"]
atlas = ExtResource("9_5gl3n")
region = Rect2(256, 768, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_sfc1e"]
atlas = ExtResource("9_5gl3n")
region = Rect2(512, 768, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_o5dga"]
atlas = ExtResource("9_5gl3n")
region = Rect2(768, 768, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_ykodq"]
atlas = ExtResource("9_5gl3n")
region = Rect2(0, 1024, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_1r5ti"]
atlas = ExtResource("9_5gl3n")
region = Rect2(256, 1024, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_eqcm0"]
atlas = ExtResource("9_5gl3n")
region = Rect2(512, 1024, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_l0k6d"]
atlas = ExtResource("9_5gl3n")
region = Rect2(768, 1024, 256, 256)

[sub_resource type="SpriteFrames" id="SpriteFrames_vuta8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mjqpn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wogyq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nhm75")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tmucn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4wd2k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ann3n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_isvyx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j5d5q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ttg5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xko1k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mx6yp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fujbr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_javgy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2jvae")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x5hun")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nqtt8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ypok")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o8e0l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a88wk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cna2g")
}],
"loop": true,
"name": &"Happiness_1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_87hag")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nqfca")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lxuod")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3rki1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k3rhn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a1iji")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ejhfj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_acxmg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wrsq1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cnves")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vdku2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_urmaa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3kg2x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2jjwu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_43k7a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l15fr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d7w4o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bi2qh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jtn65")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tcu0m")
}],
"loop": true,
"name": &"Happiness_2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bljql")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6isy4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_md4rf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5dkld")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cxjvh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_adxyw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qvkwa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a6or8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_88mcp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ir5nt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cgcef")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m7ofd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hm8ba")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ym7fs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4fy8r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n803j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qh2aq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tnm3t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bnrux")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ni5ho")
}],
"loop": true,
"name": &"Happiness_3",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_avy0h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cvvuc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rt47i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uv4cc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3jcnd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1w6cc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ugm6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tkp4y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wbq11")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rojj0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_48v7a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nr6b3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ewki0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oi5mk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b0ptl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ffa6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pjapy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_enyo0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_syrqt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_14lso")
}],
"loop": true,
"name": &"Happiness_4",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_55a82")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ef2ya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_agt15")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1v6mo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e8qid")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_idlyc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vccfr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vqrye")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yxk83")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g02mb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q276c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nodc7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hawy1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cn1gp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sfc1e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o5dga")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ykodq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1r5ti")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eqcm0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l0k6d")
}],
"loop": true,
"name": &"Happiness_5",
"speed": 5.0
}]

[node name="PoI" type="Node2D"]
script = ExtResource("1_r2j3k")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.18, 0.18)
texture = ExtResource("2_7dwvh")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_bkxm0")

[node name="LabelsTop" type="Node2D" parent="."]
position = Vector2(0, -79)

[node name="CenterContainer" type="CenterContainer" parent="LabelsTop"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -33.5
offset_top = 81.0
offset_right = 33.5
offset_bottom = 121.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="LabelsTop/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 1
alignment = 1

[node name="WaterBar" type="ProgressBar" parent="LabelsTop/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 10)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/fill = SubResource("StyleBoxFlat_nk7bn")
value = 50.0
show_percentage = false
script = ExtResource("3_nhnfe")

[node name="FoodBar" type="ProgressBar" parent="LabelsTop/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 10)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/fill = SubResource("StyleBoxFlat_t5ems")
value = 50.0
show_percentage = false
script = ExtResource("3_nhnfe")

[node name="HappyBar" type="ProgressBar" parent="LabelsTop/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 10)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/fill = SubResource("StyleBoxFlat_scv73")
value = 50.0
show_percentage = false
script = ExtResource("3_nhnfe")

[node name="LabelsBot" type="Node2D" parent="."]
position = Vector2(0, 66)

[node name="CenterContainer" type="CenterContainer" parent="LabelsBot"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = 26.0
offset_right = 20.0
offset_bottom = 66.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4

[node name="VBoxContainer" type="VBoxContainer" parent="LabelsBot/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 1

[node name="HealthBar" type="ProgressBar" parent="LabelsBot/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 10)
layout_mode = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_kjm1a")
value = 50.0
show_percentage = false
script = ExtResource("3_nhnfe")

[node name="Gauges" type="Node" parent="."]

[node name="WaterGauge" parent="Gauges" instance=ExtResource("3_1frcg")]
value_per_tick = -2

[node name="FoodGauge" parent="Gauges" instance=ExtResource("3_1frcg")]
value_per_tick = -2

[node name="HappyGauge" parent="Gauges" instance=ExtResource("3_1frcg")]
value_per_tick = -2

[node name="HealthGauge" parent="Gauges" instance=ExtResource("3_1frcg")]
value_per_tick = 1

[node name="ProductivityGauge" parent="Gauges" instance=ExtResource("3_1frcg")]
value_per_tick = 0

[node name="SpawnNextTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="Offset" type="AnimationPlayer" parent="."]
root_node = NodePath("../StatHappiness")
libraries = {
"": SubResource("AnimationLibrary_nsrex")
}
autoplay = "Poi_Happiness_1"

[node name="StatHappiness" type="AnimatedSprite2D" parent="."]
position = Vector2(-49, -88)
scale = Vector2(0.4, 0.4)
sprite_frames = SubResource("SpriteFrames_vuta8")
animation = &"Happiness_2"
autoplay = "Happiness_1"

[connection signal="gauge_value_changed" from="Gauges/WaterGauge" to="." method="_on_water_gauge_gauge_value_changed"]
[connection signal="gauge_value_zero" from="Gauges/WaterGauge" to="." method="_on_water_gauge_gauge_value_zero"]
[connection signal="gauge_value_changed" from="Gauges/FoodGauge" to="." method="_on_food_gauge_gauge_value_changed"]
[connection signal="gauge_value_zero" from="Gauges/FoodGauge" to="." method="_on_food_gauge_gauge_value_zero"]
[connection signal="gauge_value_changed" from="Gauges/HappyGauge" to="." method="_on_happy_gauge_gauge_value_changed"]
[connection signal="gauge_value_zero" from="Gauges/HappyGauge" to="." method="_on_happy_gauge_gauge_value_zero"]
[connection signal="gauge_value_changed" from="Gauges/HealthGauge" to="." method="_on_health_gauge_gauge_value_changed"]
[connection signal="gauge_value_zero" from="Gauges/HealthGauge" to="." method="_on_health_gauge_gauge_value_zero"]
